# src/controllers/auth.js
@@ -6,6 +6,22 @@ const passwordEncrypt = require("../helpers/passwordEncrypt");
 
 module.exports = {
   login: async (req, res) => {
+    /*
+    
+    #swagger.tags =['Authentication']
+    #swagger.summary = 'Login'
+    #swagger.description = 'Login with username & password'
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required:true,
+        schema:{
+         username: '*String',
+         password: '*String'
+        }
+    }
+
+    */
+
     const { username, password } = req.body; //bir personelin sistem girişi yapmasını sağlayacak parametreler.
 
     if (username && password) {
